ExtendedWorkbook refactoring